--- a/CreateRibbon/LearnCreateRibbon.csproj
+++ b/CreateRibbon/LearnCreateRibbon.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{02B64EB5-6DC7-46AD-824B-E714A9CC60E0}</ProjectGuid>
+    <ProjectGuid>{65FE0713-DB27-4502-A98C-B767834CAB9A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LearnSelectionFilter</RootNamespace>
-    <AssemblyName>LearnSelectionFilter</AssemblyName>
+    <RootNamespace>LearnCreateRibbon</RootNamespace>
+    <AssemblyName>LearnCreateRibbon</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,15 +31,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Build.Tasks.v4.0" />
     <Reference Include="PresentationCore" />
     <Reference Include="RevitAPI">
       <HintPath>C:\Program Files\Autodesk\Revit 2019\RevitAPI.dll</HintPath>
-      <Private>False</Private>
     </Reference>
     <Reference Include="RevitAPIUI">
       <HintPath>C:\Program Files\Autodesk\Revit 2019\RevitAPIUI.dll</HintPath>
-      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -51,15 +48,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="SelectionFilter.addin" />
-    <Compile Include="CountDoor.cs" />
-    <Compile Include="CountDoorSimilar.cs" />
-    <Compile Include="CountSimilarObject.cs" />
-    <Compile Include="CountWalls.cs" />
+    <Compile Include="CreateRibbon.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="GetObjectInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="CreateRibbon.addin">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LearnRevitApi\LearnSelectionFilter.csproj">
+      <Project>{02b64eb5-6dc7-46ad-824b-e714a9cc60e0}</Project>
+      <Name>LearnSelectionFilter</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Icon\Hello-32x32.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy "$(TargetDir)"."" "$(AppData)\Autodesk\Revit\Addins\2019\"</PostBuildEvent>
