--- a/LearnTransaction/LearnTransaction.csproj
+++ b/LearnTransaction/LearnTransaction.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{65FE0713-DB27-4502-A98C-B767834CAB9A}</ProjectGuid>
+    <ProjectGuid>{8AC45F64-F5A0-44CC-809E-F5533C7FD3A5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LearnCreateRibbon</RootNamespace>
-    <AssemblyName>LearnCreateRibbon</AssemblyName>
+    <RootNamespace>LearnTransaction</RootNamespace>
+    <AssemblyName>LearnTransaction</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,7 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PresentationCore" />
     <Reference Include="RevitAPI">
       <HintPath>C:\Program Files\Autodesk\Revit 2019\RevitAPI.dll</HintPath>
     </Reference>
@@ -48,31 +47,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CreateRibbon.cs" />
+    <Compile Include="AddInstanceFamily.cs" />
+    <Compile Include="EditParametersValue.cs" />
+    <Compile Include="EditTNFFootingParam.cs" />
+    <Compile Include="GetParameterValue.cs" />
+    <Compile Include="SetWallThicknessSample.cs" />
+    <Compile Include="TransactionDemo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="CreateRibbon.addin">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\LearnRevitApi\LearnSelectionFilter.csproj">
-      <Project>{02b64eb5-6dc7-46ad-824b-e714a9cc60e0}</Project>
-      <Name>LearnSelectionFilter</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\LearnTransaction\LearnTransaction.csproj">
-      <Project>{8ac45f64-f5a0-44cc-809e-f5533c7fd3a5}</Project>
-      <Name>LearnTransaction</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Icon\Hello-32x32.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetDir)"."" "$(AppData)\Autodesk\Revit\Addins\2019\"</PostBuildEvent>
-  </PropertyGroup>
 </Project>
