--- a/LearnAPIBase/LearnAPIBase.csproj
+++ b/LearnAPIBase/LearnAPIBase.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{65FE0713-DB27-4502-A98C-B767834CAB9A}</ProjectGuid>
+    <ProjectGuid>{9CDCF2E9-139C-433C-B431-083A00F4CCC1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LearnCreateRibbon</RootNamespace>
-    <AssemblyName>LearnCreateRibbon</AssemblyName>
+    <RootNamespace>LearnAPIBase</RootNamespace>
+    <AssemblyName>LearnAPIBase</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,12 +31,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PresentationCore" />
     <Reference Include="RevitAPI">
       <HintPath>C:\Program Files\Autodesk\Revit 2019\RevitAPI.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="RevitAPIUI">
       <HintPath>C:\Program Files\Autodesk\Revit 2019\RevitAPIUI.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -48,39 +49,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CreateRibbon.cs" />
+    <Compile Include="ExternalCommandBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="CreateRibbon.addin">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\LearnAPIBase\LearnAPIBase.csproj">
-      <Project>{9cdcf2e9-139c-433c-b431-083a00f4ccc1}</Project>
-      <Name>LearnAPIBase</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\LearnRevitApi\LearnSelectionFilter.csproj">
-      <Project>{02b64eb5-6dc7-46ad-824b-e714a9cc60e0}</Project>
-      <Name>LearnSelectionFilter</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\LearnTransaction\LearnTransaction.csproj">
-      <Project>{8ac45f64-f5a0-44cc-809e-f5533c7fd3a5}</Project>
-      <Name>LearnTransaction</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\WorkingWithView\WorkingWithView.csproj">
-      <Project>{cd467a8f-29b7-47da-bad6-59ec5e155862}</Project>
-      <Name>WorkingWithView</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Icon\Hello-32x32.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetDir)"."" "$(AppData)\Autodesk\Revit\Addins\2019\"</PostBuildEvent>
-  </PropertyGroup>
 </Project>
