--- a/LearnEvent/LearnEvent.csproj
+++ b/LearnEvent/LearnEvent.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{65FE0713-DB27-4502-A98C-B767834CAB9A}</ProjectGuid>
+    <ProjectGuid>{D7842F63-6B39-496B-900C-9A3C0B9BF352}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LearnCreateRibbon</RootNamespace>
-    <AssemblyName>LearnCreateRibbon</AssemblyName>
+    <RootNamespace>LearnEvent</RootNamespace>
+    <AssemblyName>LearnEvent</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,7 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PresentationCore" />
     <Reference Include="RevitAPI">
       <HintPath>C:\Program Files\Autodesk\Revit 2019\RevitAPI.dll</HintPath>
     </Reference>
@@ -48,39 +47,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CreateRibbon.cs" />
+    <Compile Include="DemoEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="CreateRibbon.addin">
+    <None Include="Event.addin">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\LearnAPIBase\LearnAPIBase.csproj">
-      <Project>{9cdcf2e9-139c-433c-b431-083a00f4ccc1}</Project>
-      <Name>LearnAPIBase</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\LearnRevitApi\LearnSelectionFilter.csproj">
-      <Project>{02b64eb5-6dc7-46ad-824b-e714a9cc60e0}</Project>
-      <Name>LearnSelectionFilter</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\LearnTransaction\LearnTransaction.csproj">
-      <Project>{8ac45f64-f5a0-44cc-809e-f5533c7fd3a5}</Project>
-      <Name>LearnTransaction</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\WorkingWithView\WorkingWithView.csproj">
-      <Project>{cd467a8f-29b7-47da-bad6-59ec5e155862}</Project>
-      <Name>WorkingWithView</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Icon\AddSheet.ico">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Icon\Hello-32x32.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
